--- a/home.html
+++ b/home.html
@@ -14,7 +14,10 @@
 </head>
 
 <body>
-Hello Google Analytices
+Hello Google Analytices<br/>
+<a href="https://instagram.com/">Instargam</a>
+<br/>
+<a href="https://www.google.com/">Google</a>
 </body>
 
 </html>
