--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
 <button onclick="shareFB()">分享到 FB</button>
 <button onclick="shareLine()">分享到 Line</button>
 Hello Google Analytices<br/>
-<a href="https://instagram.com/">Instargam</a>
+<a href="https://instagram.com/">Instagram</a>
 <br/>
 <a href="https://www.google.com/">Google</a>
 </br>
